# flask_scaffolder

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
artifacts/: .env.j2  pyproject.toml  requirements.txt  run.py
artifacts/app/: __init__.py  config.py
artifacts/app/api/: user_schema.py
artifacts/app/models/: __init__.py
artifacts/app/routes/: __init__.py
artifacts/app/utils/: auth_utils.py
flask_scaffolder/: __init__.py  cli.py  core.py
src/artifacts/: .pre-commit-config.yaml
src/artifacts/app/api/: __init__.py  base_schema.py  hello_schema.py
src/artifacts/app/models/: users.py
src/artifacts/app/routes/: hello.py
src/flask_scaffolder/: __init__.py  cli.py  core.py
