[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-scaffolder"
version = "0.1.0"
description = "A CLI tool to scaffold Flask-based projects"
authors = [
    { name = "Adam Fuzum", email = "fuzumoe@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["Jinja2"]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }  # Look for packages in src/
packages = ["flask_scaffolder"]  # The package inside src/
include-package-data = true

[project.scripts]
flask-scaffolder = "flask_scaffolder.cli:main"  # Points to src/flask_scaffolder/cli.py

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["src/artifacts", ".venv"]  # Exclude artifacts from linting
select = ["E", "F", "I", "B", "UP", "C90", "N", "PT", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py311"]